syntax = "proto3";

option go_package = "github.com/accuknox/observability/proto/summary";

package summary;

service Summary {
    rpc FetchLogs (LogsRequest) returns (stream LogsResponse);
}

message LogsRequest {

    string label = 1;
    string namespace = 2;
}

message LogsResponse {
    string podDetail = 1;
    string namespace = 2;
    repeated ListOfSource listOfProcess = 3;
    repeated ListOfSource listOfFile = 4; 
    repeated ListOfSource listOfNetwork = 5;
    repeated ListOfConnection ingress = 6;
    repeated ListOfConnection egress = 7; 
}

message ListOfSource {
    string source = 1;
    repeated ListOfDestination listOfDestination = 2;
}

message ListOfConnection {
  string destinationLabels = 1;
  string destinationNamespace = 2;
  string protocol = 3;
  uint32 port = 4;
  int32 count = 5;
  string status = 6;
  int64 lastUpdatedTime = 7;
}

message ListOfDestination {
    string destination = 1;
    int32 count = 2;
    string status = 3;
    int64 lastUpdatedTime = 4;
}